--- a/app/src/views/style.css
+++ b/app/src/views/style.css
@@ -1,1 +1,65 @@
 /** @format */
+.wrapper {
+  width: 512px;
+  height: 240px;
+  margin: 50px auto;
+  background: #fff;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.25), 0px 3px 6px rgba(0, 0, 0, 0.16);
+}
+.wrapper > .top {
+  width: 512px;
+  height: 120px;
+  background-color: #51D3E7;
+}
+.wrapper > .top > .list {
+  width: 296px;
+  height: 30px;
+  text-align: center;
+  margin: 0 auto;
+  padding: 40px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 100%;
+  color: #FFF;
+}
+.wrapper > .middle {
+  width: 512px;
+  height: 60px;
+  display: flex;  /* 내 옆 자리가 있음 거기에 놔라 !! */
+  flex: space-around;
+}
+.wrapper > .middle > .text {
+  box-sizing: border-box;
+  width: 400px;
+  height: 36px;
+  margin: 13px auto; 
+  margin-left: 18px;
+  background: #FFF;
+  border-bottom: 1px solid #C5F6FA;
+}
+.wrapper > .middle >.add {
+  width: 60px;
+  height: 36px;
+  line-height: 36px; /* 세로 가운데 정렬 */
+  text-align: center;
+  margin: 10px;
+  background: #24C3DC;
+  border-radius: 4px;
+  color: #fff;
+}
+.wrapper > .middle > .add:hover {
+  background: #2AE3FF;
+}
+.wrapper > .middle > .add:active {
+  background: #1D99AC;
+}
+.wrapper > .botton {
+  width: 512px;
+  height: 60px;
+}
+hr {
+  border: 1px solid #4FC0D1;
+}
+
