--- a/app/src/views/index.ejs
+++ b/app/src/views/index.ejs
@@ -1,14 +1,44 @@
 <!-- @format -->
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
-    <title>TodoList</title>
-  </head>
-  <body>
-    <script type="text/javascript" src="./TodoList.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="views/style.css" />
+  <title>TodoList</title>
+</head>
+
+<body>
+  <div class="todo-wrapper">
+    <div class="todo-title">TodoList</div>
+    <div class="todo-box">
+
+      <div class="todo-input-box">
+        <input type="text" class="todo-input">
+        <button class="add-btn">add</button>
+      </div>
+
+      <ul class="todo-list">
+        <!-- <li class="todo-item checked">
+          <button class="delBtn">X</button>
+          <input class="todo" value="첫번째 할일">
+          <button class="reviceBtn">수정</button>
+        </li>
+        <li class="todo-item">
+          <button class="delBtn">X</button>
+          <div class="todo">두번째 할 일</div>
+          <button class="reviceBtn">수정</button>
+        </li>
+        <li class="todo-item">
+          <button class="delBtn">X</button>
+          <div class="todo">세번째 할 일</div>
+          <button class="reviceBtn checked">완료</button>
+        </li> -->
+      </ul>
+    </div>
+  </div>
+  <script type="text/javascript" src="views/TodoList.js"></script>
+</body>
+
 </html>
