--- a/app/src/views/style.css
+++ b/app/src/views/style.css
@@ -1,22 +1,27 @@
-/** @format */
+* {
+  margin: 0;
+  padding: 0;
+}
 .wrapper {
   width: 512px;
-  height: 240px;
+  min-height: 241px;
+  height: fit-content;
   margin: 50px auto;
   background: #fff;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.25), 0px 3px 6px rgba(0, 0, 0, 0.16);
 }
-.wrapper > .top {
+.top {
   width: 512px;
   height: 120px;
+  display: table-cell; 
+  vertical-align: middle;
   background-color: #51D3E7;
 }
-.wrapper > .top > .list {
+.list {
   width: 296px;
   height: 30px;
   text-align: center;
   margin: 0 auto;
-  padding: 40px;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
@@ -24,22 +29,27 @@
   line-height: 100%;
   color: #FFF;
 }
-.wrapper > .middle {
+.middle {
   width: 512px;
-  height: 60px;
+  height: 53px;
   display: flex;  /* 내 옆 자리가 있음 거기에 놔라 !! */
   flex: space-around;
+  border-bottom: 1px solid #4FC0D1;
 }
-.wrapper > .middle > .text {
+input[type="text"] {
+  outline: none;
+  border: none;
   box-sizing: border-box;
   width: 400px;
   height: 36px;
   margin: 13px auto; 
   margin-left: 18px;
-  background: #FFF;
+ background: #FFF; 
   border-bottom: 1px solid #C5F6FA;
 }
-.wrapper > .middle >.add {
+.add {
+  outline: none;
+  border: none;
   width: 60px;
   height: 36px;
   line-height: 36px; /* 세로 가운데 정렬 */
@@ -48,18 +58,99 @@
   background: #24C3DC;
   border-radius: 4px;
   color: #fff;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
 }
-.wrapper > .middle > .add:hover {
+.add:hover {
   background: #2AE3FF;
 }
-.wrapper > .middle > .add:active {
+.add:active {
   background: #1D99AC;
 }
-.wrapper > .botton {
+ .bottom {
   width: 512px;
+  /* height: fit-content; */
+} 
+.bottom_box {
+  width: 475px;
   height: 60px;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-between;
+  border-top: 1px solid lightgrey;
 }
-hr {
-  border: 1px solid #4FC0D1;
+.bottom_box:first-child {
+  margin-top: 4px;
+  border: none;
 }
-
+.bottom_box:hover {
+  background-color: #E3FAFC;
+}
+.delBtn {
+  width: 9px;
+  height: 16px;
+  outline: none;
+  border: none;
+  background-color:transparent;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: -0.05em;
+  visibility: hidden;
+  color: #FF6161;
+}
+.bottom_box:hover .delBtn {
+  visibility:  visible;
+}
+input[type="text2"] {
+  outline: none;
+  border: none;
+  width: 390px;
+  height: 18px;
+  margin-left: 25px;
+  font-family: 'Noto Sans KR';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  display: flex;
+  align-items: center;
+  letter-spacing: -0.05em;
+  background-color: transparent;
+  color:#606060; 
+  border-radius: 4px;
+}
+input[type="text2"]:active {
+  text-decoration: line-through;
+  color: lightgray;
+  background-color: #fff; 
+}
+.changeBtn {
+  outline: none;
+  border: none;
+  width: 40px;
+  height: 24px;
+  line-height: 24px; /* 세로 가운데 정렬 */
+  font-size: 13px;
+  font-weight: 500;
+  text-align: center;
+  border-radius: 4px;
+  background: #24C3DC;
+  color: #fff;
+}
+.changeBtn:hover {
+  background: #2AE3FF;
+}
+.changeBtn:active {
+  background: #1D99AC;
+}
