홍유진 프론트 앤드 과제 제출합니다

--- a/app/src/views/index.ejs
+++ b/app/src/views/index.ejs
@@ -19,16 +19,16 @@
       </div>
       <div class="middle">
         <input type="text" class="todo-input"></input>
-        <input type="submit" class="add" value="add"></input>
+        <input type="submit" class="addBtn" value="add"></input>
       </div>
       <ul class="bottom">
         <!-- <li class="bottom_box"> 
             <buttom class="delBtn">X</buttom> 
             <div class="todo">
               <input
-                type = "text2"
-                type = "text2"
-                class = "text2"
+                type = "inputText"
+                type = "inputText"
+                class = "inputText"
                 value = ""
                 readonly
               />
