프론트 CRUD 기능 구현

--- a/app/src/views/index.ejs
+++ b/app/src/views/index.ejs
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="views/style.css" />
+  <link rel="stylesheet" href="/views/style.css" />
   <title>TodoList</title>
 </head>
 
@@ -20,21 +20,6 @@
       </div>
 
       <ul class="todo-list">
-        <!-- <li class="todo-item checked">
-          <button class="delBtn">X</button>
-          <input class="todo" value="첫번째 할일">
-          <button class="reviceBtn">수정</button>
-        </li>
-        <li class="todo-item">
-          <button class="delBtn">X</button>
-          <div class="todo">두번째 할 일</div>
-          <button class="reviceBtn">수정</button>
-        </li>
-        <li class="todo-item">
-          <button class="delBtn">X</button>
-          <div class="todo">세번째 할 일</div>
-          <button class="reviceBtn checked">완료</button>
-        </li> -->
       </ul>
     </div>
   </div>
