--- a/app/src/views/style.css
+++ b/app/src/views/style.css
@@ -10,52 +10,6 @@ body {
   min-height: 100%;
 }
 
-.todo-wrapper {
-  justify-content: center;
-  height: fit-content;
-  margin-top: 64px;
-  min-width: 512px;
-  min-height: 235px;
-  background: #ffffff;
-  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.25), 0px 3px 6px rgba(0, 0, 0, 0.16);
-}
-
-.todo-title {
-  display: flex;
-  width: 512px;
-  height: 110px;
-
-  background: #51d3e7;
-
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 40px;
-  line-height: 100%;
-
-  color: #ffffff;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  letter-spacing: -0.05em;
-}
-
-.todo-box {
-  background-color: white;
-
-  width: 512px;
-}
-
-.todo-input-box {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  height: 63px;
-  border-bottom: 1px solid #24c3dc;
-  justify-content: flex-start;
-  align-items: center;
-}
-
 button {
   background-color: #24c3dc;
   color: white;
@@ -66,11 +20,65 @@ button {
   letter-spacing: -0.05em;
 }
 
+button:hover {
+  background-color: #2ae3ff;
+}
+
+button:active {
+  background-color: #1d99ac;
+}
+
+ul {
+  padding: 0px;
+  margin: 0px;
+  list-style: none;
+}
+
+.todo-wrapper {
+  justify-content: center;
+  height: fit-content;
+  margin-top: 64px;
+  min-width: 512px;
+  min-height: 241px;
+  background: #ffffff;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.25), 0px 3px 6px rgba(0, 0, 0, 0.16);
+}
+
+.todo-title {
+  display: flex;
+  width: 512px;
+  height: 110px;
+  background: #51d3e7;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 100%;
+  color: #ffffff;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  letter-spacing: -0.05em;
+}
+
+.todo-box {
+  background-color: white;
+  width: 512px;
+}
+
+.todo-input-box {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  height: 62px;
+  border-bottom: 1px solid #24c3dc;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 .add-btn {
   width: 60px;
   height: 36px;
-  min-width: none;
-  min-height: none;
   font-size: 16px;
   margin-left: 17px;
 }
@@ -78,23 +86,12 @@ button {
 .todo-input {
   width: 400px;
   height: 36px;
-  /* text-align: center; */
   margin-left: 18px;
   border: 0;
   outline: none;
   font-size: 1.3rem;
   border-bottom: 1px solid #c5f6fa;
-}
-
-.todo-item {
-  position: relative;
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  height: 61.5px;
-  border-bottom: 0.3px solid #ddd;
+  padding: 0;
 }
 
 .todo-item.checked .checkbox {
@@ -138,19 +135,20 @@ button {
   padding: 0 1rem;
 }
 
-ul {
-  padding: 0px;
-  margin: 0px;
-  list-style: none;
-}
-
 .todo-item {
+  position: relative;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
   width: 472px;
-  height: 52px;
+  height: 60px;
   margin-left: 20px;
-  margin-top: 4px;
+  padding-top: 4px;
   padding-bottom: 4px;
   background-clip: content-box;
+  border-top: 1px solid lightgray;
 }
 
 .delBtn {
@@ -165,7 +163,6 @@ ul {
   padding: 0%;
   width: 9px;
   height: 16px;
-
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
@@ -192,24 +189,7 @@ ul {
   color: #adb5bd;
 }
 
-.edit-input {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 590px;
-  height: 2.8rem;
-  margin: 0;
-}
-
-button:hover {
-  background-color: #2ae3ff;
-}
-
-button:active {
-  background-color: #1d99ac;
-}
-
-.todo-item.checked .todo.moddable {
+.todo-item .todo.moddable {
   background-color: white;
   border: 0;
   border-radius: 10px;
@@ -221,4 +201,8 @@ button:active {
   font-size: 16px;
   line-height: 100%;
   outline: none;
+}
+
+.todo-item:first-child {
+  border: none;
 }
