--- a/app/src/views/style.css
+++ b/app/src/views/style.css
@@ -1,1 +1,159 @@
 /** @format */
+html, body {
+  height: 100%;
+  width: 100%;
+  background-color: white;
+}
+
+li {  
+  width: 512px;
+  height: 68px;
+  text-align: center;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+ul {
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+
+.todo_input{
+  width: 400px;
+  height: 36px;
+  border: none;
+  border-bottom: 1px solid #C5F6FA;
+}
+
+.div_main {
+  margin-top: 64px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 512px;
+  min-height: 242px;
+  height: fit-content;
+  background: #FFFFFF;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.25), 0px 3px 6px rgba(0, 0, 0, 0.16);
+  }
+
+.div_todo { /*TodoList 제목*/
+  width: 512px;
+  height: 110px;
+  background-color: #51D3E7;
+  text-align: center;
+  display: table-cell; 
+  vertical-align: middle;
+  font-size: 40px; 
+  color: white;
+}
+
+.div_input { /*입력받는 곳*/
+  width: 512px;
+  height: 63px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border-bottom: 1px solid #4FC0D1;
+}
+
+.li_add { /*추가 되었을때*/
+  width: 512px;
+  height: 68px;
+  text-align: center;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.div_add { /*추가 되었을때 */
+  width: 472px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: none;
+}
+
+.div_text {
+  display: flex;
+  align-items : center;
+  position: absolute;
+  text-align: left;
+  color: black;
+  background-color: transparent;
+  width: 390px;
+  height: 18px;
+  margin-left: 25px;
+  border: none;
+}
+
+.div_add:hover {
+  background-color: #E3FAFC;
+}
+
+.btn_add {
+  color: white;
+  width: 60px;
+  height: 36px;
+  background: #24C3DC;
+  border-radius: 4px;
+  outline: 0;
+  border: 0;
+}
+
+.btn_add:hover{
+  background: #2AE3FF;
+}
+
+.btn_add:active{
+  background: #1D99AC;
+}
+
+.input_add {
+  position: relative;
+  width: 390px;
+  height: 18px;
+  border: none;
+}
+
+
+.btn_edit {
+  color: white;
+  width: 40px;
+  height: 24px;
+  background: #24C3DC;
+  border-radius: 4px;
+  outline: 0;
+  border: 0;
+}
+
+.btn_edit:hover{
+  background: #2AE3FF;
+}
+
+.btn_edit:active{
+  background: #1D99AC;
+}
+
+.btn_del {
+  color: red;
+  width: 9px;
+  height: 16px;
+  background-color:transparent;
+  border-radius: 4px;
+  outline: 0;
+  border: 0;
+}
+
+.btn_del:hover{
+  background-color:transparent;
+}
+
+.btn_del:active{
+  background-color:transparent;
+}
