홍유진 백엔드 과제 제출

--- a/app/src/views/index.ejs
+++ b/app/src/views/index.ejs
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="views/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <!--<script type="text/javascript" src="./TodoList.js"></script>-->
+    <!-- <script type="text/javascript" src="views/TodoList.js"></script> -->
     <title>TodoList</title>
   </head>
   <body>
@@ -17,10 +17,10 @@
       <div class="top"> 
         <div class="list">TodoList</div> 
       </div>
-      <div class="middle">
-        <input type="text" class="todo-input"></input>
-        <input type="submit" class="addBtn" value="add"></input>
-      </div>
+        <form class="middle">
+          <input type="text" class="todo-input"></input>
+          <input type="submit" class="addBtn" value="add"></input>
+        </form>
       <ul class="bottom">
         <!-- <li class="bottom_box"> 
             <buttom class="delBtn">X</buttom> 
