--- a/app/src/views/index.ejs
+++ b/app/src/views/index.ejs
@@ -1,14 +1,28 @@
-<!-- @format -->
-
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
-    <title>TodoList</title>
-  </head>
-  <body>
-    <script type="text/javascript" src="./TodoList.js"></script>
-  </body>
+<html lang="ko">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=1600, initial-scale=1.0" />
+        <title>TodoList</title>
+        <link rel="stylesheet" href="/css/style.css" />
+    </head>
+
+    <body>
+        <div id="Box" class="boxDiv">
+            <div class="titleBox">
+                <div class="titleTextDiv">TodoList</div>
+            </div>
+            <div class="addBox">
+                <input
+                    type="text"
+                    id="inputContent"
+                    placeholder="해야 할 일을 입력해주세요."
+                />
+                <button id="addBtn">add</button>
+            </div>
+            <ul id="listBox"></ul>
+        </div>
+    </body>
+    <script src="/js/TodoList.js" type="module"></script>
 </html>
